--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,19 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MemoreaListActivity"
-            android:label="@string/app_name">
-
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MemorizeScreenActivity"
+            android:label="@string/title_activity_memorize_screen" >
+        </activity>
+
+        <receiver android:name=".AlarmReceiver"/>
     </application>
 
 </manifest>
