add new activity for memorea info, small bug fixes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,12 @@
             android:label="@string/title_activity_memorize_screen" >
         </activity>
 
-        <receiver android:name=".AlarmReceiver"/>
+        <receiver android:name=".AlarmReceiver" />
+
+        <activity
+            android:name=".MemoreaInfoActivity"
+            android:label="@string/title_activity_memorea_info" >
+        </activity>
     </application>
 
 </manifest>
