--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.memorease.memorease" >
+    package="com.tarian.memorease" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MemoreaListActivity"
+            android:name="com.tarian.memorease.MemoreaListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,14 +17,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MemorizeScreenActivity"
+            android:name="com.tarian.memorease.MemorizeScreenActivity"
             android:label="@string/title_activity_memorize_screen">
         </activity>
 
-        <receiver android:name=".AlarmReceiver" />
+        <receiver android:name="com.tarian.memorease.AlarmReceiver" />
 
         <activity
-            android:name=".MemoreaInfoActivity"
+            android:name="com.tarian.memorease.MemoreaInfoActivity"
             android:label="@string/title_activity_memorea_info" >
         </activity>
     </application>
