--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'com.tarian.memorease'
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 3
-        versionName "2.1"
+        versionCode 5
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -26,4 +26,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'com.android.support:design:22.2.0'
+    compile 'info.android15.nucleus:nucleus:2.0.0-beta5'
+    compile 'info.android15.nucleus:nucleus-support-v4:2.0.0-beta5'
+    compile 'info.android15.nucleus:nucleus-support-v7:2.0.0-beta5'
+    compile 'javax.inject:javax.inject:1@jar'
 }
